added View class

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Madnoyz</title>
 </head>
 <body>
+    <div id="root"></div>
     <script type='module' src="./src/index.ts"></script>
 </body>
 </html>
